--- a/.gitignore
+++ b/.gitignore
@@ -46,4 +46,13 @@ depcomp
 install-sh
 missing
 config.h
+test1
+test1.c
+test1.symbols.h
+opcc
+.deps/
+Makefile
+config.log
+config.status
+stamp-h1
 
