--- a/Makefile.am
+++ b/Makefile.am
@@ -502,109 +502,109 @@ bin/tools/opcc$(EXEEXT): tools/opcc/opcc.cpp
 dosboxxr/lib/cpu/core/necv20.opcodes.p: opcodes/necv20.opcodes
 	$(BUILD_CPP) -E -I. opcodes/necv20.opcodes $@
 dosboxxr/lib/cpu/core/necv20.cxx.axx.decom.h: dosboxxr/lib/cpu/core/necv20.opcodes.p $(OPCC)$(EXEEXT)
-	$(OPCC)$(EXEEXT) -i dosboxxr/lib/cpu/core/necv20.opcodes.p -o $@ -m decompile -c 16 -a 16
+	$(OPCC)$(EXEEXT) -i dosboxxr/lib/cpu/core/necv20.opcodes.p -o $@ -s $@.symbols.h -m decompile -c 16 -a 16
 
 dosboxxr/lib/cpu/core/intel8088.opcodes.p: opcodes/intel8088.opcodes
 	$(BUILD_CPP) -E -I. opcodes/intel8088.opcodes $@
 dosboxxr/lib/cpu/core/intel8088.cxx.axx.decom.h: dosboxxr/lib/cpu/core/intel8088.opcodes.p $(OPCC)$(EXEEXT)
-	$(OPCC)$(EXEEXT) -i dosboxxr/lib/cpu/core/intel8088.opcodes.p -o $@ -m decompile -c 16 -a 16
+	$(OPCC)$(EXEEXT) -i dosboxxr/lib/cpu/core/intel8088.opcodes.p -o $@ -s $@.symbols.h -m decompile -c 16 -a 16
 dosboxxr/lib/cpu/core/intel8088.cxx.axx.emu.h: dosboxxr/lib/cpu/core/intel8088.opcodes.p $(OPCC)$(EXEEXT)
 	$(OPCC)$(EXEEXT) -i dosboxxr/lib/cpu/core/intel8088.opcodes.p -o $@ -m execute -gc1632
 
 dosboxxr/lib/cpu/core/intel80186.opcodes.p: opcodes/intel80186.opcodes
 	$(BUILD_CPP) -E -I. opcodes/intel80186.opcodes $@
 dosboxxr/lib/cpu/core/intel80186.cxx.axx.decom.h: dosboxxr/lib/cpu/core/intel80186.opcodes.p $(OPCC)$(EXEEXT)
-	$(OPCC)$(EXEEXT) -i dosboxxr/lib/cpu/core/intel80186.opcodes.p -o $@ -m decompile -c 16 -a 16
+	$(OPCC)$(EXEEXT) -i dosboxxr/lib/cpu/core/intel80186.opcodes.p -o $@ -s $@.symbols.h -m decompile -c 16 -a 16
 
 dosboxxr/lib/cpu/core/intel80286.opcodes.p: opcodes/intel80286.opcodes
 	$(BUILD_CPP) -E -I. opcodes/intel80286.opcodes $@
 dosboxxr/lib/cpu/core/intel80286.cxx.axx.decom.h: dosboxxr/lib/cpu/core/intel80286.opcodes.p $(OPCC)$(EXEEXT)
-	$(OPCC)$(EXEEXT) -i dosboxxr/lib/cpu/core/intel80286.opcodes.p -o $@ -m decompile -c 16 -a 16
+	$(OPCC)$(EXEEXT) -i dosboxxr/lib/cpu/core/intel80286.opcodes.p -o $@ -s $@.symbols.h -m decompile -c 16 -a 16
 
 dosboxxr/lib/cpu/core/intel80386.opcodes.p: opcodes/intel80386.opcodes
 	$(BUILD_CPP) -E -I. opcodes/intel80386.opcodes $@
 dosboxxr/lib/cpu/core/intel80386.cxx.axx.decom.h: dosboxxr/lib/cpu/core/intel80386.opcodes.p $(OPCC)$(EXEEXT)
-	$(OPCC)$(EXEEXT) -i dosboxxr/lib/cpu/core/intel80386.opcodes.p -o $@ -m decompile -c 32 -a 32 -c32vars -g
+	$(OPCC)$(EXEEXT) -i dosboxxr/lib/cpu/core/intel80386.opcodes.p -o $@ -s $@.symbols.h -m decompile -c 32 -a 32 -c32vars -g
 
 dosboxxr/lib/cpu/core/intel80386early.opcodes.p: opcodes/intel80386early.opcodes
 	$(BUILD_CPP) -E -I. opcodes/intel80386early.opcodes $@
 dosboxxr/lib/cpu/core/intel80386early.cxx.axx.decom.h: dosboxxr/lib/cpu/core/intel80386early.opcodes.p $(OPCC)$(EXEEXT)
-	$(OPCC)$(EXEEXT) -i dosboxxr/lib/cpu/core/intel80386early.opcodes.p -o $@ -m decompile -c 32 -a 32 -c32vars -g
+	$(OPCC)$(EXEEXT) -i dosboxxr/lib/cpu/core/intel80386early.opcodes.p -o $@ -s $@.symbols.h -m decompile -c 32 -a 32 -c32vars -g
 
 dosboxxr/lib/cpu/core/intel80486.opcodes.p: opcodes/intel80486.opcodes
 	$(BUILD_CPP) -E -I. opcodes/intel80486.opcodes $@
 dosboxxr/lib/cpu/core/intel80486.cxx.axx.decom.h: dosboxxr/lib/cpu/core/intel80486.opcodes.p $(OPCC)$(EXEEXT)
-	$(OPCC)$(EXEEXT) -i dosboxxr/lib/cpu/core/intel80486.opcodes.p -o $@ -m decompile -c 32 -a 32 -c32vars -g
+	$(OPCC)$(EXEEXT) -i dosboxxr/lib/cpu/core/intel80486.opcodes.p -o $@ -s $@.symbols.h -m decompile -c 32 -a 32 -c32vars -g
 
 dosboxxr/lib/cpu/core/intel80486early.opcodes.p: opcodes/intel80486early.opcodes
 	$(BUILD_CPP) -E -I. opcodes/intel80486early.opcodes $@
 dosboxxr/lib/cpu/core/intel80486early.cxx.axx.decom.h: dosboxxr/lib/cpu/core/intel80486early.opcodes.p $(OPCC)$(EXEEXT)
-	$(OPCC)$(EXEEXT) -i dosboxxr/lib/cpu/core/intel80486early.opcodes.p -o $@ -m decompile -c 32 -a 32 -c32vars -g
+	$(OPCC)$(EXEEXT) -i dosboxxr/lib/cpu/core/intel80486early.opcodes.p -o $@ -s $@.symbols.h -m decompile -c 32 -a 32 -c32vars -g
 
 dosboxxr/lib/cpu/core/intelPentium.opcodes.p: opcodes/intelPentium.opcodes
 	$(BUILD_CPP) -E -I. opcodes/intelPentium.opcodes $@
 dosboxxr/lib/cpu/core/intelPentium.cxx.axx.decom.h: dosboxxr/lib/cpu/core/intelPentium.opcodes.p $(OPCC)$(EXEEXT)
-	$(OPCC)$(EXEEXT) -i dosboxxr/lib/cpu/core/intelPentium.opcodes.p -o $@ -m decompile -c 32 -a 32 -c32vars -g
+	$(OPCC)$(EXEEXT) -i dosboxxr/lib/cpu/core/intelPentium.opcodes.p -o $@ -s $@.symbols.h -m decompile -c 32 -a 32 -c32vars -g
 
 dosboxxr/lib/cpu/core/intelPentiumPro.opcodes.p: opcodes/intelPentiumPro.opcodes
 	$(BUILD_CPP) -E -I. opcodes/intelPentiumPro.opcodes $@
 dosboxxr/lib/cpu/core/intelPentiumPro.cxx.axx.decom.h: dosboxxr/lib/cpu/core/intelPentiumPro.opcodes.p $(OPCC)$(EXEEXT)
-	$(OPCC)$(EXEEXT) -i dosboxxr/lib/cpu/core/intelPentiumPro.opcodes.p -o $@ -m decompile -c 32 -a 32 -c32vars -g
+	$(OPCC)$(EXEEXT) -i dosboxxr/lib/cpu/core/intelPentiumPro.opcodes.p -o $@ -s $@.symbols.h -m decompile -c 32 -a 32 -c32vars -g
 
 dosboxxr/lib/cpu/core/intelPentiumMMX.opcodes.p: opcodes/intelPentiumMMX.opcodes
 	$(BUILD_CPP) -E -I. opcodes/intelPentiumMMX.opcodes $@
 dosboxxr/lib/cpu/core/intelPentiumMMX.cxx.axx.decom.h: dosboxxr/lib/cpu/core/intelPentiumMMX.opcodes.p $(OPCC)$(EXEEXT)
-	$(OPCC)$(EXEEXT) -i dosboxxr/lib/cpu/core/intelPentiumMMX.opcodes.p -o $@ -m decompile -c 32 -a 32 -c32vars -g
+	$(OPCC)$(EXEEXT) -i dosboxxr/lib/cpu/core/intelPentiumMMX.opcodes.p -o $@ -s $@.symbols.h -m decompile -c 32 -a 32 -c32vars -g
 
 dosboxxr/lib/cpu/core/intelPentiumProMMX.opcodes.p: opcodes/intelPentiumProMMX.opcodes
 	$(BUILD_CPP) -E -I. opcodes/intelPentiumProMMX.opcodes $@
 dosboxxr/lib/cpu/core/intelPentiumProMMX.cxx.axx.decom.h: dosboxxr/lib/cpu/core/intelPentiumProMMX.opcodes.p $(OPCC)$(EXEEXT)
-	$(OPCC)$(EXEEXT) -i dosboxxr/lib/cpu/core/intelPentiumProMMX.opcodes.p -o $@ -m decompile -c 32 -a 32 -c32vars -g
+	$(OPCC)$(EXEEXT) -i dosboxxr/lib/cpu/core/intelPentiumProMMX.opcodes.p -o $@ -s $@.symbols.h -m decompile -c 32 -a 32 -c32vars -g
 
 dosboxxr/lib/cpu/core/cyrix6x86MX.opcodes.p: opcodes/cyrix6x86MX.opcodes
 	$(BUILD_CPP) -E -I. opcodes/cyrix6x86MX.opcodes $@
 dosboxxr/lib/cpu/core/cyrix6x86MX.cxx.axx.decom.h: dosboxxr/lib/cpu/core/cyrix6x86MX.opcodes.p $(OPCC)$(EXEEXT)
-	$(OPCC)$(EXEEXT) -i dosboxxr/lib/cpu/core/cyrix6x86MX.opcodes.p -o $@ -m decompile -c 32 -a 32 -c32vars -g
+	$(OPCC)$(EXEEXT) -i dosboxxr/lib/cpu/core/cyrix6x86MX.opcodes.p -o $@ -s $@.symbols.h -m decompile -c 32 -a 32 -c32vars -g
 
 dosboxxr/lib/cpu/core/intelPentium2.opcodes.p: opcodes/intelPentium2.opcodes
 	$(BUILD_CPP) -E -I. opcodes/intelPentium2.opcodes $@
 dosboxxr/lib/cpu/core/intelPentium2.cxx.axx.decom.h: dosboxxr/lib/cpu/core/intelPentium2.opcodes.p $(OPCC)$(EXEEXT)
-	$(OPCC)$(EXEEXT) -i dosboxxr/lib/cpu/core/intelPentium2.opcodes.p -o $@ -m decompile -c 32 -a 32 -c32vars -g
+	$(OPCC)$(EXEEXT) -i dosboxxr/lib/cpu/core/intelPentium2.opcodes.p -o $@ -s $@.symbols.h -m decompile -c 32 -a 32 -c32vars -g
 
 dosboxxr/lib/cpu/core/intelPentium3.opcodes.p: opcodes/intelPentium3.opcodes
 	$(BUILD_CPP) -E -I. opcodes/intelPentium3.opcodes $@
 dosboxxr/lib/cpu/core/intelPentium3.cxx.axx.decom.h: dosboxxr/lib/cpu/core/intelPentium3.opcodes.p $(OPCC)$(EXEEXT)
-	$(OPCC)$(EXEEXT) -i dosboxxr/lib/cpu/core/intelPentium3.opcodes.p -o $@ -m decompile -c 32 -a 32 -c32vars -g
+	$(OPCC)$(EXEEXT) -i dosboxxr/lib/cpu/core/intelPentium3.opcodes.p -o $@ -s $@.symbols.h -m decompile -c 32 -a 32 -c32vars -g
 
 dosboxxr/lib/cpu/core/intelPentium4.opcodes.p: opcodes/intelPentium4.opcodes
 	$(BUILD_CPP) -E -I. opcodes/intelPentium4.opcodes $@
 dosboxxr/lib/cpu/core/intelPentium4.cxx.axx.decom.h: dosboxxr/lib/cpu/core/intelPentium4.opcodes.p $(OPCC)$(EXEEXT)
-	$(OPCC)$(EXEEXT) -i dosboxxr/lib/cpu/core/intelPentium4.opcodes.p -o $@ -m decompile -c 32 -a 32 -c32vars -g
+	$(OPCC)$(EXEEXT) -i dosboxxr/lib/cpu/core/intelPentium4.opcodes.p -o $@ -s $@.symbols.h -m decompile -c 32 -a 32 -c32vars -g
 
 dosboxxr/lib/cpu/core/intelPentium4Prescott.opcodes.p: opcodes/intelPentium4Prescott.opcodes
 	$(BUILD_CPP) -E -I. opcodes/intelPentium4Prescott.opcodes $@
 dosboxxr/lib/cpu/core/intelPentium4Prescott.cxx.axx.decom.h: dosboxxr/lib/cpu/core/intelPentium4Prescott.opcodes.p $(OPCC)$(EXEEXT)
-	$(OPCC)$(EXEEXT) -i dosboxxr/lib/cpu/core/intelPentium4Prescott.opcodes.p -o $@ -m decompile -c 32 -a 32 -c32vars -g
+	$(OPCC)$(EXEEXT) -i dosboxxr/lib/cpu/core/intelPentium4Prescott.opcodes.p -o $@ -s $@.symbols.h -m decompile -c 32 -a 32 -c32vars -g
 
 dosboxxr/lib/cpu/core/amdk6r2.opcodes.p: opcodes/amdk6r2.opcodes
 	$(BUILD_CPP) -E -I. opcodes/amdk6r2.opcodes $@
 dosboxxr/lib/cpu/core/amdk6r2.cxx.axx.decom.h: dosboxxr/lib/cpu/core/amdk6r2.opcodes.p $(OPCC)$(EXEEXT)
-	$(OPCC)$(EXEEXT) -i dosboxxr/lib/cpu/core/amdk6r2.opcodes.p -o $@ -m decompile -c 32 -a 32 -c32vars -g
+	$(OPCC)$(EXEEXT) -i dosboxxr/lib/cpu/core/amdk6r2.opcodes.p -o $@ -s $@.symbols.h -m decompile -c 32 -a 32 -c32vars -g
 
 dosboxxr/lib/cpu/core/amdAthlon.opcodes.p: opcodes/amdAthlon.opcodes
 	$(BUILD_CPP) -E -I. opcodes/amdAthlon.opcodes $@
 dosboxxr/lib/cpu/core/amdAthlon.cxx.axx.decom.h: dosboxxr/lib/cpu/core/amdAthlon.opcodes.p $(OPCC)$(EXEEXT)
-	$(OPCC)$(EXEEXT) -i dosboxxr/lib/cpu/core/amdAthlon.opcodes.p -o $@ -m decompile -c 32 -a 32 -c32vars -g
+	$(OPCC)$(EXEEXT) -i dosboxxr/lib/cpu/core/amdAthlon.opcodes.p -o $@ -s $@.symbols.h -m decompile -c 32 -a 32 -c32vars -g
 
 dosboxxr/lib/cpu/core/intelCore.opcodes.p: opcodes/intelCore.opcodes
 	$(BUILD_CPP) -E -I. opcodes/intelCore.opcodes $@
 dosboxxr/lib/cpu/core/intelCore.cxx.axx.decom.h: dosboxxr/lib/cpu/core/intelCore.opcodes.p $(OPCC)$(EXEEXT)
-	$(OPCC)$(EXEEXT) -i dosboxxr/lib/cpu/core/intelCore.opcodes.p -o $@ -m decompile -c 32 -a 32 -c32vars -g
+	$(OPCC)$(EXEEXT) -i dosboxxr/lib/cpu/core/intelCore.opcodes.p -o $@ -s $@.symbols.h -m decompile -c 32 -a 32 -c32vars -g
 
 dosboxxr/lib/cpu/core/everything.opcodes.p: opcodes/everything.opcodes
 	$(BUILD_CPP) -E -I. opcodes/everything.opcodes $@
 dosboxxr/lib/cpu/core/everything.cxx.axx.decom.h: dosboxxr/lib/cpu/core/everything.opcodes.p $(OPCC)$(EXEEXT)
-	$(OPCC)$(EXEEXT) -i dosboxxr/lib/cpu/core/everything.opcodes.p -o $@ -m decompile -c 32 -a 32 -c32vars -g
+	$(OPCC)$(EXEEXT) -i dosboxxr/lib/cpu/core/everything.opcodes.p -o $@ -s $@.symbols.h -m decompile -c 32 -a 32 -c32vars -g
 dosboxxr/lib/cpu/core/everything.c16.a16.emu.h: dosboxxr/lib/cpu/core/everything.opcodes.p $(OPCC)$(EXEEXT)
 	$(OPCC)$(EXEEXT) -i dosboxxr/lib/cpu/core/everything.opcodes.p -o $@ -m execute -c 16 -a 16 -c32vars -gc1632
 dosboxxr/lib/cpu/core/everything.cxx.axx.emu.h: dosboxxr/lib/cpu/core/everything.opcodes.p $(OPCC)$(EXEEXT)
